--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,62 @@ body {
    */
   background-image: url('./images/bg-pattern.png');
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+span{
+  font-weight: 700;
+}
+.body-card{
+  text-align: center;
+}
+.title-country{
+  display: inline-block;
+  text-align: center;
+
+  font-size: 45px;
+}
+.title{
+  font-size: 40px;
+  color: dimgrey;
+}
+.intro {
+  margin-top: 100px;
+  text-align: center;
+}
+.list{
+  list-style: none;
+
+  margin: 0;
+  padding: 0;
+ }
+.form-control{
+  min-width: 200px;
+  height: 30px;
+  
+  border-radius: 10px;
+  border-color: rgb(114, 109, 109);
+}
+.card{
+  display: flex;
+  justify-content: center;
+  
+}
+
+.img-country{
+  margin-left: 40px;
+}
+.item-card{
+  text-align: start;
+  margin-top: 20px;
+}
+.list-lang{
+  margin-top: 15px;
+  list-style-type: disc;
+}
+.list-country {
+  display: inline-flex;
+ flex-direction: column;
+ }
