--- a/src/styles.css
+++ b/src/styles.css
@@ -23,19 +23,37 @@ img {
   max-width: 350px;
   height: auto;
 }
-span{
+span {
   font-weight: 700;
 }
-.body-card{
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  /* outline: 2px solid tomato; */
+  margin: 0 auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .title-country {
+    display: inline-block;
+    font-size: 35px;
+  }
+}
+
+.body-card {
   text-align: center;
 }
-.title-country{
+.title-country {
   display: inline-block;
   text-align: center;
 
   font-size: 45px;
 }
-.title{
+.title {
   font-size: 40px;
   color: dimgrey;
 }
@@ -43,37 +61,39 @@ span{
   margin-top: 30px;
   text-align: center;
 }
-.list{
+.list {
   list-style: none;
 
   margin: 0;
   padding: 0;
- }
-.form-control{
+}
+.form-control {
   min-width: 200px;
   height: 30px;
-  
+
   border-radius: 10px;
   border-color: rgb(114, 109, 109);
 }
-.card{
-  display: flex;
-  justify-content: center;
-  
+@media screen and (min-width: 720px) {
+  .card {
+    display: flex;
+    justify-content: center;
+  }
 }
-
-.img-country{
+.img-country {
   margin-left: 40px;
 }
-.item-card{
+.item-card {
   text-align: start;
   margin-top: 20px;
 }
-.list-lang{
+.list-lang {
+  text-align: start;
   margin-top: 15px;
+  margin-bottom: 15px;
   list-style-type: disc;
 }
 .list-country {
   display: inline-flex;
- flex-direction: column;
- }
+  flex-direction: column;
+}
